--- a/FunctionalProgramming/FunctionalProgramming.csproj
+++ b/FunctionalProgramming/FunctionalProgramming.csproj
@@ -75,5 +75,8 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Notes.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
