--- a/FunctionalProgramming/FunctionalProgramming.csproj
+++ b/FunctionalProgramming/FunctionalProgramming.csproj
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LanguageExt.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\LanguageExt.Core.2.1.32\lib\net451\LanguageExt.Core.dll</HintPath>
+    <Reference Include="LanguageExt.Core">
+      <HintPath>..\..\..\.nuget\packages\languageext.core\1.9.7\lib\netstandard1.3\LanguageExt.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
